:bug: Add missing JVM modules (for JVM v9+).